# code_module

./: .gitignore  README.md
calib/: CMakeLists.txt  cam2veh_ceres.cpp  lidar_proj_cam.cpp  readme.md
calib/workspace/: 1740127535524983985.pcd  frontmain_to_lidar.yaml  helios32_top_vehicle_extrinsics.yaml
calibration/: lane_based_mono_calibration.py  readme.md
ceres_demo/:  ceres_learning.md  CMakeLists.txt  ceres_demo  demo_01.cc  fitting_epx  fitting_epx.cc  powerwell.cc
ceres_demo/ceres/: CMakeLists.txt
ceres_demo/slam_test/: CMakeLists.txt
ceres_demo/slam_test/pose_graph_2d_demo/: CMakeLists.txt  pose_graph_2d_error_term.h
ceres_demo/slam_test/pose_graph_3d_demo/: CMakeLists.txt
eigen/: CMakeLists.txt  build.sh  lm_regression.cc
game-programming-patterns/Sequencing Patterns/: CMakeLists.txt  main_double_buffer.cc
game-programming-patterns/graph/: CMakeLists.txt  graph.cc  graph.h  test.cc
game-programming-patterns/sequencing_patterns/: away_from_white_block.cc  slap.cc
game-programming-patterns/space_division/: CMakeLists.txt
game-programming-patterns/space_division/include/: ball.h  config.h  quadtree.h  util.h
game-programming-patterns/space_division/src/: ball.cpp  main.cpp  quadtree.cpp  util.cpp
kalman_filter/: CMakeLists.txt  kalman_filter  kalman_filter.cc  kalman_filter.h  test_kalman_filter.cc
opencv/: fft_demo.py  fft_overlap.py
opencv/fft_py/: fft_demo.py
opencv/flann/: 01_flann_demo.cc  01_knn.cc  02_2d_icp.cc  CMakeLists.txt  flann_demo
opencv/opevcv320_stereoRectify/: CMakeLists.txt  opevcv320_stereoRectify.cc  opevcv320_stereoRectify.h  unit_test.cc
pcl_demo/: octree_demo.cc
